@@ -5,4 +5,11 @@ Financial Budget Instrument
 
 ```sh
 mvn spring-boot:run
+
+or
+
+mvn clean package
+
+java --add-opens java.base/java.lang=spring.core \ 
+--module-path=target/modules --module velka
 ```
